# Yukikaze

./: .gitignore  .gitmodules  codegen.sh  flake.nix
YukikazeClient/: CMakeLists.txt  main.cpp  yukikaze_client.cpp  yukikaze_client.hpp
YukikazeClient/commands/: cancel.cpp  encode.cpp  status.cpp
YukikazeServer/: CMakeLists.txt  encode.cpp  main.cpp  subprocess.cpp  subprocess.hpp  yukikaze_server.cpp  yukikaze_server.hpp
api/: yukikaze.grpc.pb.cc  yukikaze.grpc.pb.h  yukikaze.pb.cc  yukikaze.pb.h  yukikaze.proto
docker/: Dockerfile  build.sh
docker/grpc/: Dockerfile  build.sh
